# portfolio-copilot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: api-reference.md  architecture.md  article_diagrams.md  quickstart.md
scripts/: setup_qdrant.sh
src/: lyzr.py
src/agents/: __init__.py  orchestrator.py  state.py
src/agents/tools/: news_tools.py  portfolio_tools.py  symbol_tools.py
src/agents/workflows/: __init__.py  fundamental_analysis.py  market_context.py  portfolio_analysis.py  stock_events.py  stock_research.py  watchlist_suggestion.py
src/core/: config.py  logging.py  observability.py
src/data/: ingestion.py
src/data/scrapers/: __init__.py  bse.py  economictimes.py  moneycontrol.py  screener.py  yahoo_finance.py
src/llm/: base.py  claude.py  factory.py  ollama.py  tool_parser.py  tools.py
src/mcp/: kite_client.py
src/rag/: __init__.py  chunking.py  embeddings.py  retriever.py  vector_store.py
src/ui/: __init__.py  cli.py  streamlit_app.py
src/ui/components/: __init__.py  chat.py  login.py  portfolio_display.py  sidebar.py  suggested_prompts.py
src/ui/utils/: __init__.py  async_bridge.py  session.py
tests/: test_fundamental_analysis.py  test_orchestrator.py
